--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-/* body {
+body {
   background-image: url('../public/mushroom.avif');
   background-size: cover;
   background-position: inherit;
   background-repeat: no-repeat;
+  position: relative;
   margin: 0px;
   height: 100%;
-} */
+} 
+
+html {
+  height: 100%;
+  width: 100%;
+}
